<resources>
    <string name="app_name">Regal Training</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_heading">Regal Training</string>
    <string name="nav_drawer_subheading">training@regalbeloit.com</string>

    <string name="nav_drawer_menu_3dview">3D Viewer</string>
    <string name="nav_drawer_menu_assembly">Assembly Videos</string>
    <string name="nav_drawer_menu_bom">BOM</string>
    <string name="nav_drawer_menu_game">Game</string>
    <string name="nav_drawer_menu_header_manage">Manage</string>
    <string name="nav_drawer_menu_feedback">Send Feedback</string>
    <string name="nav_drawer_menu_settings">Settings</string>

    <string name="action_settings">Settings</string>
    
</resources>
