<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_3dview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawer_menu_3dview" />
        <item
            android:id="@+id/nav_assembly"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_drawer_menu_assembly" />
        <item
            android:id="@+id/nav_bom"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_menu_bom" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_drawer_menu_game" />
    </group>

    <item android:title="@string/nav_drawer_menu_header_manage">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_menu_feedback" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_drawer_menu_settings" />
        </menu>
    </item>

</menu>
